--- a/action.yml
+++ b/action.yml
@@ -21,11 +21,12 @@ inputs:
     default: README.md
 runs:
   using: "composite"
+  env:
+    handouts: ""
   steps:
     - name: Generate handouts
       run: sudo bash ${{ github.action_path }}/generate_handouts.sh ${{ inputs.handouts }}
       shell: bash
-      working-directory: .
     - name: Compile LaTeX sources
       uses: xu-cheng/latex-action@2.2.1
       with:
