--- a/action.yml
+++ b/action.yml
@@ -1,7 +1,8 @@
 name: 'PubTeX'
 description: 'A GitHub action to publicly host LaTeX files on GitHub Pages'
-icon: file-text
-color: green
+branding:
+  icon: file-text
+  color: green
 inputs:
   deploy_key:
     description: 'Deploy key used to deploy to GitHub Pages'
