--- a/action.yml
+++ b/action.yml
@@ -38,7 +38,7 @@ runs:
       with:
         pre_compile: tlmgr update --self && tlmgr update --all
         root_file: |
-          ${{ steps.generate-handouts.outputs.handouts }}
+          ${{ steps.generate-handouts.outputs.handouts | xargs }}
           ${{ inputs.files }}
     - name: Move PDFs
       run: mv ./*.pdf ${{ inputs.publish_dir }}
