--- a/action.yml
+++ b/action.yml
@@ -31,7 +31,7 @@ runs:
   steps:
     - id: generate-handouts
       name: Generate handouts
-      run: sudo bash ${{ github.action_path }}/generate_handouts.sh ${{ inputs.handouts }}
+      run: sudo bash ${{ github.action_path }}/generate_handouts.sh "${{ inputs.handouts }}"
       shell: bash
     - name: Compile LaTeX sources
       uses: xu-cheng/latex-action@2.2.1
