--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'PubTeX'
-description: 'A GitHub action to publicly host LaTeX files on GitHub Pages'
+description: 'A GitHub action to compile and publish LaTeX files to GitHub Pages'
 branding:
   icon: file-text
   color: green
